fix header missing background when scrolling to the left

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -28,8 +28,8 @@
     display: flex;
     justify-content: space-between;
     align-items: stretch;
+    flex-grow: 1;
     padding-right: $margin-right-width;
-    width: 100%;
     height: 100%;
     background-image: linear-gradient(to right, $light-purple, $light-blue);
   }
